src/test/ui/borrowck/borrowck-move-from-subpath-of-borrowed-path.stderr
error[E0505]: cannot move out of `*a` because it is borrowed
  --> $DIR/borrowck-move-from-subpath-of-borrowed-path.rs:12:13
   |
LL |     let b = &a;
   |             -- borrow of `a` occurs here
LL | 
LL |     let z = *a;
   |             ^^ move out of `*a` occurs here
LL |     b.use_ref();
   |     - borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0505`.
